# mlmark

./: .gitignore  LICENSE.md  README.md
config/: armnn-cpu-mobilenet-fp32-accuracy.json  armnn-cpu-mobilenet-fp32-throughput.json  armnn-cpu-resnet50-fp32-accuracy.json  armnn-cpu-resnet50-fp32-throughput.json  armnn-gpu-mobilenet-fp16-accuracy.json  armnn-gpu-mobilenet-fp16-throughput.json  armnn-gpu-mobilenet-fp32-accuracy.json  armnn-gpu-mobilenet-fp32-throughput.json  armnn-gpu-resnet50-fp16-accuracy.json  armnn-gpu-resnet50-fp16-throughput.json  armnn-gpu-resnet50-fp32-accuracy.json  armnn-gpu-resnet50-fp32-throughput.json  armnn_tf-cpu-mobilenet-fp32-accuracy.json  armnn_tf-cpu-mobilenet-fp32-throughput.json  armnn_tf-cpu-resnet50-fp32-accuracy.json  armnn_tf-cpu-resnet50-fp32-throughput.json  armnn_tf-gpu-mobilenet-fp16-accuracy.json  armnn_tf-gpu-mobilenet-fp16-throughput.json  armnn_tf-gpu-mobilenet-fp32-accuracy.json  armnn_tf-gpu-mobilenet-fp32-throughput.json  armnn_tf-gpu-resnet50-fp16-accuracy.json  armnn_tf-gpu-resnet50-fp16-throughput.json  armnn_tf-gpu-resnet50-fp32-accuracy.json  armnn_tf-gpu-resnet50-fp32-throughput.json  armnn_tflite-cpu-mobilenet-fp32-accuracy.json  armnn_tflite-cpu-mobilenet-fp32-throughput.json  armnn_tflite-cpu-mobilenet-int8-accuracy.json  armnn_tflite-cpu-mobilenet-int8-throughput.json  armnn_tflite-cpu-resnet50-fp32-accuracy.json  armnn_tflite-cpu-resnet50-fp32-throughput.json  armnn_tflite-cpu-resnet50-int8-accuracy.json  armnn_tflite-cpu-resnet50-int8-throughput.json  armnn_tflite-cpu-ssdmobilenet-fp32-accuracy.json  armnn_tflite-cpu-ssdmobilenet-fp32-throughput.json  armnn_tflite-cpu-ssdmobilenet-int8-accuracy.json  armnn_tflite-cpu-ssdmobilenet-int8-throughput.json  armnn_tflite-gpu-mobilenet-fp16-accuracy.json  armnn_tflite-gpu-mobilenet-fp16-throughput.json  armnn_tflite-gpu-mobilenet-fp32-accuracy.json  armnn_tflite-gpu-mobilenet-fp32-throughput.json  (+92 more)
harness/: mlmark.py
harness/eelib/: __init__.py  coco.py  constants.py  getter.py  models.py  paths.py  report.py  sysinfo.py  validate.py
models/caffe/resnet50/: README.md
models/openvino/mobilenet/: README.md  mobilenetv1_int8.xml
models/openvino/resnet50/: README.md  resnet-50_int8.xml
models/openvino/ssdmobilenet/: README.md
models/tensorflow/mobilenet/: README.md
models/tensorflow/resnet50/: README.md
models/tensorflow/ssdmobilenet/: README.md
models/tensorflow_lite_quantised/: README.md
models/tensorflow_uff/mobilenet/: README.md
models/tensorflow_uff/resnet50/: README.md
models/tensorflow_uff/ssdmobilenet/: README.md
targets/armnn_tf/: README.md
targets/armnn_tf/workloads/common/: __init__.py  libopencv_imgcodecs.so.4.1  libprotobuf.so.15
targets/armnn_tf/workloads/resnet50/: __init__.py  make.sh
targets/armnn_tflite/: README.md
targets/armnn_tflite/workloads/common/: __init__.py  libjasper.so.1  libjpeg.so.8  libopencv_core.so.3.3  libopencv_core.so.4.1  libopencv_imgcodecs.so.3.3  libopencv_imgproc.so.3.3  libpng12.so.0
targets/armnn_tflite/workloads/mobilenet/: __init__.py  main.cpp  make.sh
targets/armnn_tflite/workloads/resnet50/: __init__.py  main.cpp  make.sh
targets/armnn_tflite/workloads/ssdmobilenet/: __init__.py  main.cpp  make.sh
targets/armnn_ubuntu/: README.md
targets/armnn_ubuntu/workloads/common/: libopencv_core.so.4.1  libopencv_imgproc.so.4.1
targets/armnn_ubuntu/workloads/mobilenet/: __init__.py  main.cpp  make.sh
targets/armnn_ubuntu/workloads/resnet50/: main.cpp
targets/google_tpu/: README.md
targets/google_tpu/workloads/common/: __init__.py  preprocessor.py
targets/google_tpu/workloads/mobilenet/: Net.py  __init__.py
targets/google_tpu/workloads/resnet50/: Net.py  __init__.py
targets/google_tpu/workloads/ssdmobilenet/: Net.py  __init__.py
targets/openvino_ubuntu/: README.md
targets/openvino_ubuntu/install/: compile_MLMARK_sources.sh  install_myriad_bootrules.sh
targets/openvino_ubuntu/workloads/common/: __init__.py  parse_ssd_output.py
targets/openvino_ubuntu/workloads/common/src/: CMakeLists.txt
targets/openvino_ubuntu/workloads/common/src/common/format_reader/: MnistUbyte.cpp  bmp.cpp  format_reader.cpp  format_reader.h  opencv_wraper.cpp
targets/openvino_ubuntu/workloads/common/src/image_classification_async/: CMakeLists.txt  image_classification_async.h  main.cpp  main_debug.cpp.bkp.txt
targets/openvino_ubuntu/workloads/common/src/object_detection_ssd/: CMakeLists.txt  main.cpp  object_detection_ssd.h
targets/openvino_ubuntu/workloads/common/src/object_detection_ssd_async/: CMakeLists.txt  main.cpp  object_detection_ssd_async.h
targets/openvino_ubuntu/workloads/mobilenet/: Net.py  __init__.py
targets/openvino_ubuntu/workloads/resnet50/: Net.py  __init__.py
targets/openvino_ubuntu/workloads/ssdmobilenet/: Net.py  __init__.py
targets/tensorflow/: README.md
targets/tensorflow/workloads/common/: __init__.py  preprocessor.py
targets/tensorflow/workloads/mobilenet/: Net.py  __init__.py
targets/tensorflow/workloads/resnet50/: Net.py  __init__.py
targets/tensorflow/workloads/ssdmobilenet/: Net.py  __init__.py
targets/tensorflow_lite/: README.md
targets/tensorflow_lite/utility/: README.md  mobilenet_PTIQ_script.py  resnet50_PTIQ_script.py  ssdmobilenet_PTIQ_script.py
targets/tensorflow_lite/workloads/common/: __init__.py  preprocessor.py
targets/tensorflow_lite/workloads/mobilenet/: Net.py  __init__.py
targets/tensorflow_lite/workloads/resnet50/: Net.py  __init__.py
targets/tensorflow_lite/workloads/ssdmobilenet/: Net.py  __init__.py
targets/tensorrt/: README.md
targets/tensorrt/cpp_environment/: BatchStream.h  BatchStream_ssdmobilenet.h  CMakeLists.txt  Makefile  README.md  common.h  cudaMappedMemory.h  loadImage.cpp  loadImage.h  mobilenet_class.cpp  nmsPluginOpt.cpp  resnet50_class.cpp  ssdmobilenet_class.cpp  warmup.cu  warmup.h
targets/tensorrt/utility/: COCO2017_list.txt  CalibrationTable_mobilenet  CalibrationTable_resnet50  CalibrationTable_ssdmobilenet  ILSVRC2012_list.txt  ListFile_generator.sh  README.md  config.py
(+8 files in other folders)
